test/incompatibleFunDef.slq
def main(){
	if measure(H(0:ğ”¹)){
		x:=1:ğ”¹;
		def foo()â‡’x; // error
	}else{
		def foo()â‡’();
	}
}
